name:                Higer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Higer#readme
license:             MIT
license-file:        LICENSE
author:              Athul Suresh, Mithum Mathew
maintainer:          example@example.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , TigerLex
  build-depends:       base >= 4.7 && < 5
                     , array
  build-tools:         happy
                     , alex
  default-language:    Haskell2010

executable Higer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Higer
  default-language:    Haskell2010

test-suite Higer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , Higer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/crunchbang/Higer
